@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR
skinparam classBackgroundColor LOGIC_COLOR

abstract class "{abstract}\nCommand" as Command
abstract class "{abstract}\nShowTagCommand" as ShowTagCommand
class ShowTagContactCommand
class ShowTagEventCommand
class ShowTagTodoCommand

Command <|-- ShowTagCommand
ShowTagCommand <|-- ShowTagContactCommand
ShowTagCommand <|-- ShowTagEventCommand
ShowTagCommand <|-- ShowTagTodoCommand

@enduml
